HUB-8111: Avoid list decorations overlapping floating elements
HUB-8111 (Short descriptions do not render well)

--- a/ui/components/forms/RichTextEditor/styles.css
+++ b/ui/components/forms/RichTextEditor/styles.css
@@ -125,6 +125,7 @@
   & ul,
   & ol {
     padding-left: 20px;
+    display: table; /* avoid bullet points overlapping floating elements https://stackoverflow.com/a/11293198/1312073 */
 
     & li,
     & li > p {
